[package]
name = "leptos_shopify"
version = "0.1.0"
edition = "2024"
authors = ["Torben A. Flessner <git@flessner.dev>"]
description = "Leptos bindings for shopify_storefront"
license = "MIT OR Apache-2.0"
repository = "https://github.com/flessner/shopify-rs"

[dependencies]
leptos = "0.8"
shopify_storefront = "0.1.0"
