[package]
name = "shopify_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-net = "0.6"
