[package]
name = "shopify_storefront"
version = "0.1.0"
edition = "2024"
authors = ["Torben A. Flessner <git@flessner.dev>"]
description = "Unofficial Rust client for the Shopify Storefront API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/flessner/shopify-rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-net = "0.6"
